<resources>
    <string name="app_name">Notes App</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="register">Register</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="notes">Notes</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="add_notes">Add Notes</string>
    <string name="set_priority">Set Priority</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>

</resources>