<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AddUpdateNotesFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_title"
        android:layout_gravity="start"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title"
        android:layout_gravity="start"
        android:id="@+id/etTitle"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_priority"
        android:layout_gravity="start"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rbPriority"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            android:id="@+id/rbLow"
            android:checked="true"
            android:layout_gravity="start"
            android:textSize="20sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:id="@+id/rbMedium"
            android:layout_gravity="start"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:id="@+id/rbHigh"
            android:layout_gravity="start"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_description"
        android:layout_gravity="start"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:gravity="top"
        android:id="@+id/etDescription"
        android:textSize="20sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_notes"
        android:id="@+id/btnAddNotes"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

</LinearLayout>